updating doc, removing pfind and adding H5StandardNameInterface

--- a/docs/conventions/conventions.ipynb
+++ b/docs/conventions/conventions.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "904dbb92-b4f8-4cc1-91fc-90f560caa56a",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "a42aef74-4faa-4b88-bbaf-83ba81b4a1f4",
    "metadata": {},
    "outputs": [],
@@ -51,12 +51,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "e693d840-2068-4b67-a8a3-6b6941527ea7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# cv = h5tbx.conventions.from_zenodo(doi=8220739)"
+    "cv = h5tbx.conventions.from_zenodo(doi=8276817)"
    ]
   },
   {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "4dda9e66-986f-471d-b80f-824999e17eab",
    "metadata": {},
    "outputs": [
@@ -98,17 +98,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "d8f4d8e8-3888-494d-a555-41b5173d8b2e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<h5rdmtoolbox.conventions.core.use at 0x2129df47bb0>"
+       "<h5rdmtoolbox.conventions.core.use at 0x217793bbf40>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,17 +129,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "0750b190-677e-4de3-9f58-b6e87c71a32b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<h5rdmtoolbox.conventions.core.use at 0x212b10cbca0>"
+       "<h5rdmtoolbox.conventions.core.use at 0x217793d68e0>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "44472d73-4616-4494-b7bc-d229d22bb78c",
    "metadata": {},
    "outputs": [],
@@ -186,17 +186,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "f4d74d69-16cb-40b2-9fab-d99f3fbb1127",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<h5rdmtoolbox.conventions.core.use at 0x212b10a27f0>"
+       "<h5rdmtoolbox.conventions.core.use at 0x217793c6b80>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "af06bdf5-7bc1-48ac-b307-2b09644c5c1b",
    "metadata": {},
    "outputs": [
@@ -262,9 +262,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "58611d7e-daba-4530-80fa-113ed016d5db",
+   "metadata": {},
+   "source": [
+    "## Conventions based on \"Standard Names\"\n",
+    "\n",
+    "The toolbox supports the usage of an already implemented standard attribute called \"standard_name\" (and some more associated with it). Please find out more about it [here](standard_name_convention.ipynb)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1c62c28-40b5-4e52-b4a6-d3c85bcbef04",
+   "id": "f49d34b7-a5e3-4fde-b18e-9cce043ff681",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1e4b7e6-4868-465e-a7e2-5c5573f7e860",
    "metadata": {},
    "outputs": [],
    "source": []
