--- a/docs/wrapper/GroupCreation.ipynb
+++ b/docs/wrapper/GroupCreation.ipynb
@@ -22,11 +22,14 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-05-07_10:55:50,76 DEBUG    [__init__.py:36] changed logger level for h5rdmtoolbox from 20 to DEBUG\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<h5rdmtoolbox.conventions.core.use at 0x226b1d45370>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -138,23 +141,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "48caad4c-a49c-4907-a433-260ba4472fb5",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n"
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'validate'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m     test_filename \u001b[38;5;241m=\u001b[39m h5\u001b[38;5;241m.\u001b[39mfilename  \u001b[38;5;66;03m# or h5.hdf_filename\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m h5tbx\u001b[38;5;241m.\u001b[39mFile(test_filename) \u001b[38;5;28;01mas\u001b[39;00m h5:\n\u001b[1;32m----> 8\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[43mh5\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcheck\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n",
+      "File \u001b[1;32m~\\Documents\\programming\\GitHub\\h5RDMtoolbox\\h5rdmtoolbox\\wrapper\\core.py:1962\u001b[0m, in \u001b[0;36mFile.check\u001b[1;34m(self, grp)\u001b[0m\n\u001b[0;32m   1947\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcheck\u001b[39m(\u001b[38;5;28mself\u001b[39m, grp: Union[\u001b[38;5;28mstr\u001b[39m, h5py\u001b[38;5;241m.\u001b[39mGroup] \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mint\u001b[39m:\n\u001b[0;32m   1948\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Run layout check. This method may be overwritten to add conditional\u001b[39;00m\n\u001b[0;32m   1949\u001b[0m \u001b[38;5;124;03m     checking.\u001b[39;00m\n\u001b[0;32m   1950\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   1960\u001b[0m \u001b[38;5;124;03m        Number of detected issues.\u001b[39;00m\n\u001b[0;32m   1961\u001b[0m \u001b[38;5;124;03m     \"\"\"\u001b[39;00m\n\u001b[1;32m-> 1962\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_layout\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalidate\u001b[49m(\u001b[38;5;28mself\u001b[39m[grp])\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'validate'"
      ]
     }
    ],
    "source": [
     "import h5py\n",
-    "with h5py.File(h5tbx.generate_temporary_filename(suffix='.hdf'), 'w') as h5:\n",
+    "with h5py.File(h5tbx.utils.generate_temporary_filename(suffix='.hdf'), 'w') as h5:\n",
     "    h5.attrs['title'] = 'Tutorial data'\n",
     "    h5.attrs['__version__'] = '0.1.12'\n",
     "    test_filename = h5.filename  # or h5.hdf_filename\n",
@@ -165,30 +173,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "3a84fae2-9413-4afc-aa13-ee5ecc37531f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Layout Validation report\n",
-      "------------------------\n",
-      "Number of validations (called/specified): 0/0\n",
-      "Number of inactive validations: 0\n",
-      "Success rate: 100.0% (n_fails=0)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\da4323\\Documents\\programming\\GitHub\\h5RDMtoolbox\\h5rdmtoolbox\\conventions\\layout\\core.py:44: UserWarning: No specifications registered to this layout, thus success ratio will always be 1.0\n",
-      "  warnings.warn('No specifications registered to this layout, thus success '\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with h5tbx.File(test_filename) as h5:\n",
     "    lay = h5.layout\n",
@@ -221,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.17"
   }
  },
  "nbformat": 4,
