--- a/docs/wrapper/SpecialIO.ipynb
+++ b/docs/wrapper/SpecialIO.ipynb
@@ -13,9 +13,21 @@
    "execution_count": 1,
    "id": "77fa362b-5622-4b69-b37a-04ed4f59ec48",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<h5rdmtoolbox.conventions.core.use at 0x1ccd6b14fd0>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import h5rdmtoolbox as h5tbx"
+    "import h5rdmtoolbox as h5tbx\n",
+    "h5tbx.use(None)"
    ]
   },
   {
@@ -432,26 +444,26 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--4977362700\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--4977362700\">\n",
+       "                        <input id=\"group-ds--5077702300\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--5077702300\">\n",
        "                        /<span>(2)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.4.0a1</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8.0a0</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/x-4979234900\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/x-4979238000\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/x-4979238000\">x</label>\n",
+       "                <ul id=\"ds-1-/x-5079083800\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/x-5079086700\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/x-5079086700\">x</label>\n",
        "                    <span class=\"h5tb-dims\">(4) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/y-4979425400\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/y-4979427900\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/y-4979427900\">y</label>\n",
-       "                    <span class=\"h5tb-dims\">(4) [float64]</span>\n",
+       "                <ul id=\"ds-1-/y-5079614900\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/y-5079617700\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/y-5079617700\">y</label>\n",
+       "                    <span class=\"h5tb-dims\">(x: 4) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
        "                </ul>\n",
@@ -701,26 +713,26 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--5063871900\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--5063871900\">\n",
+       "                        <input id=\"group-ds--5107625300\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--5107625300\">\n",
        "                        /<span>(2)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.4.0a1</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8.0a0</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/x-5066578100\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/x-5066583200\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/x-5066583200\">x</label>\n",
+       "                <ul id=\"ds-1-/x-5108524200\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/x-5108528200\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/x-5108528200\">x</label>\n",
        "                    <span class=\"h5tb-dims\">(12) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/y-5066901000\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/y-5066905400\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/y-5066905400\">y</label>\n",
-       "                    <span class=\"h5tb-dims\">(12) [float64]</span>\n",
+       "                <ul id=\"ds-1-/y-5108966100\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/y-5108969100\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/y-5108969100\">y</label>\n",
+       "                    <span class=\"h5tb-dims\">(x: 12) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
        "                </ul>\n",
@@ -962,25 +974,25 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--5157393100\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--5157393100\">\n",
+       "                        <input id=\"group-ds--5138401500\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--5138401500\">\n",
        "                        /<span>(2)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.4.0a1</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8.0a0</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/x-5158184700\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/x-5158187300\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/x-5158187300\">x</label>\n",
+       "                <ul id=\"ds-1-/x-5139759200\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/x-5139762200\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/x-5139762200\">x</label>\n",
        "                    <span class=\"h5tb-dims\">(2, 8) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/y-5158328600\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/y-5158331800\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/y-5158331800\">y</label>\n",
+       "                <ul id=\"ds-1-/y-5139889100\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/y-5139891400\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/y-5139891400\">y</label>\n",
        "                    <span class=\"h5tb-dims\">(2, 8) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
@@ -1224,17 +1236,17 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--5245749600\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--5245749600\">\n",
+       "                        <input id=\"group-ds--5161632500\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--5161632500\">\n",
        "                        /<span>(1)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.4.0a1</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8.0a0</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/testimg-5246626600\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/testimg-5246629100\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/testimg-5246629100\">testimg</label>\n",
+       "                <ul id=\"ds-1-/testimg-5162809900\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/testimg-5162814900\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/testimg-5162814900\">testimg</label>\n",
        "                    <span class=\"h5tb-dims\">(5, 20, 10) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
@@ -1509,17 +1521,17 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--5391187600\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--5391187600\">\n",
+       "                        <input id=\"group-ds--5206179800\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--5206179800\">\n",
        "                        /<span>(1)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.4.0a1</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8.0a0</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/testimg-5391814400\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/testimg-5391816900\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/testimg-5391816900\">testimg</label>\n",
+       "                <ul id=\"ds-1-/testimg-5206892700\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/testimg-5206895600\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/testimg-5206895600\">testimg</label>\n",
        "                    <span class=\"h5tb-dims\">(5, 20, 10) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
@@ -1568,7 +1580,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.17"
   }
  },
  "nbformat": 4,
