--- a/docs/wrapper/CreateFile.ipynb
+++ b/docs/wrapper/CreateFile.ipynb
@@ -19,7 +19,7 @@
     {
      "data": {
       "text/plain": [
-       "<h5rdmtoolbox.conventions.core.use at 0x2295e6d5120>"
+       "<h5rdmtoolbox.conventions.core.use at 0x184419e12e0>"
       ]
      },
      "execution_count": 1,
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "34b7e026-3f38-494c-bd86-17c786c3ecbb",
    "metadata": {
     "tags": []
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "58c032e2-f964-4d2b-bdfd-6666a66948a8",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.8.17"
   }
  },
  "nbformat": 4,
