--- a/docs/wrapper/Misc.ipynb
+++ b/docs/wrapper/Misc.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "e08a3d8f-b170-4030-a707-6f01b373e712",
    "metadata": {},
    "outputs": [
@@ -240,12 +240,12 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--231956603554600\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--231956603554600\">\n",
+       "                        <input id=\"group-ds--5213880000\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--5213880000\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.7.0a1</li><li style=\"list-style-type: none; font-style: italic\">timestamp : 2023-08-04T06:56:13.584460</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8.0a0</li><li style=\"list-style-type: none; font-style: italic\">timestamp : 2023-08-23T17:27:05.833270</li>\n",
        "                    </ul>\n",
        "</li>\n",
        "</ul>\n",
@@ -290,7 +290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.8.17"
   }
  },
  "nbformat": 4,
