--- a/docs/wrapper/NaturalNaming.ipynb
+++ b/docs/wrapper/NaturalNaming.ipynb
@@ -14,14 +14,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "97f1f3a5-5f93-4e1b-b7a4-e3d9b296dd00",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<h5rdmtoolbox.conventions.core.use at 0x1d3b39918e0>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import h5rdmtoolbox as h5tbx"
+    "import h5rdmtoolbox as h5tbx\n",
+    "h5tbx.use(None)"
    ]
   },
   {
@@ -34,17 +46,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "44fc86eb-608d-4254-873d-6d4dabd74997",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<h5rdmtoolbox._cfg.set_config at 0x1d3b43dbf40>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "h5tbx.config.natural_naming = True"
+    "h5tbx.set_config(natural_naming=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "c5b94c36-c5c2-4c09-b5a8-a4a45ccd401e",
    "metadata": {
     "tags": []
@@ -74,17 +97,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "b2d56e3a-78d8-4149-94dc-1377a0bd0cd6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<h5rdmtoolbox._cfg.set_config at 0x1d3b4420f10>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "h5tbx.config.natural_naming = False"
+    "h5tbx.set_config(natural_naming=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "8e030d3d-b0f7-4cb6-b473-d337724953ef",
    "metadata": {},
    "outputs": [
@@ -101,7 +135,7 @@
     "    ds = h5.create_dataset('test', shape=(3,))\n",
     "    try:\n",
     "        print(h5.test)\n",
-    "    except AttributeError as e:\n",
+    "    except Exception as e:\n",
     "        print(e)"
    ]
   },
@@ -130,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.17"
   }
  },
  "nbformat": 4,
