--- a/docs/conventions/conventions.ipynb
+++ b/docs/conventions/conventions.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "904dbb92-b4f8-4cc1-91fc-90f560caa56a",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "a42aef74-4faa-4b88-bbaf-83ba81b4a1f4",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "e693d840-2068-4b67-a8a3-6b6941527ea7",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
     {
      "data": {
       "text/plain": [
-       "<h5rdmtoolbox.conventions.core.use at 0x217793bbf40>"
+       "using(\"h5tbx\")"
       ]
      },
      "execution_count": 5,
@@ -136,7 +136,7 @@
     {
      "data": {
       "text/plain": [
-       "<h5rdmtoolbox.conventions.core.use at 0x217793d68e0>"
+       "using(\"h5py\")"
       ]
      },
      "execution_count": 6,
@@ -193,7 +193,7 @@
     {
      "data": {
       "text/plain": [
-       "<h5rdmtoolbox.conventions.core.use at 0x217793c6b80>"
+       "using(\"None\")"
       ]
      },
      "execution_count": 8,
