--- a/docs/conventions/standard_name_convention.ipynb
+++ b/docs/conventions/standard_name_convention.ipynb
@@ -156,7 +156,7 @@
    "source": [
     "Initializing standard name tables from a web-resource should be the standard process, because a project or community might defined it and published it under a DOI.\n",
     "\n",
-    "The `h5rdmtoolbox` especially supports tables that are published on [Zenodo](zenodo.org/):"
+    "The `h5rdmtoolbox` especially supports tables that are published on [Zenodo](https://zenodo.org/):"
    ]
   },
   {
