--- a/docs/wrapper/NaturalNaming.ipynb
+++ b/docs/wrapper/NaturalNaming.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "97f1f3a5-5f93-4e1b-b7a4-e3d9b296dd00",
    "metadata": {
     "tags": []
@@ -23,10 +23,10 @@
     {
      "data": {
       "text/plain": [
-       "<h5rdmtoolbox.conventions.core.use at 0x1d3b39918e0>"
+       "using(\"h5py\")"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,17 +46,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "44fc86eb-608d-4254-873d-6d4dabd74997",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<h5rdmtoolbox._cfg.set_config at 0x1d3b43dbf40>"
+       "<h5rdmtoolbox._cfg.set_config at 0x1bbbda712b0>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "c5b94c36-c5c2-4c09-b5a8-a4a45ccd401e",
    "metadata": {
     "tags": []
@@ -97,17 +97,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "b2d56e3a-78d8-4149-94dc-1377a0bd0cd6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<h5rdmtoolbox._cfg.set_config at 0x1d3b4420f10>"
+       "<h5rdmtoolbox._cfg.set_config at 0x1bbbda84550>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "8e030d3d-b0f7-4cb6-b473-d337724953ef",
    "metadata": {},
    "outputs": [
