--- a/docs/wrapper/GroupCreation.ipynb
+++ b/docs/wrapper/GroupCreation.ipynb
@@ -24,7 +24,7 @@
     {
      "data": {
       "text/plain": [
-       "<h5rdmtoolbox.conventions.core.use at 0x226b1d45370>"
+       "using(\"h5py\")"
       ]
      },
      "execution_count": 1,
@@ -121,76 +121,6 @@
     "with h5tbx.File(h5.hdf_filename) as h5:\n",
     "    print(h5.find({'$name': {'$regex': '.*'}}, rec=False))"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2c083948-8661-46ea-9b51-c44ad4a9a9e2",
-   "metadata": {},
-   "source": [
-    "# Meta convention: Static layouts:\n",
-    "\n",
-    "Each HDF wrapper class must fulfill certain requirements, e.g.\n",
-    " - to have specific attributes\n",
-    " - to have specific attributes with a certain value\n",
-    " - to have specific groups\n",
-    " - to have specific datasets\n",
-    " - to have a specific dataset with a specific shape\n",
-    "\n",
-    "The basic wrapper-class reflects the \"minimum standard\". It must have certain atributes, such as \"creation_time \" or \"title\". To check which one exactly, let's print the content of the file to the screen using `dump()` (outside of jupyter notebooks print the instance or call `sdump()`)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "48caad4c-a49c-4907-a433-260ba4472fb5",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'validate'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m     test_filename \u001b[38;5;241m=\u001b[39m h5\u001b[38;5;241m.\u001b[39mfilename  \u001b[38;5;66;03m# or h5.hdf_filename\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m h5tbx\u001b[38;5;241m.\u001b[39mFile(test_filename) \u001b[38;5;28;01mas\u001b[39;00m h5:\n\u001b[1;32m----> 8\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[43mh5\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcheck\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n",
-      "File \u001b[1;32m~\\Documents\\programming\\GitHub\\h5RDMtoolbox\\h5rdmtoolbox\\wrapper\\core.py:1962\u001b[0m, in \u001b[0;36mFile.check\u001b[1;34m(self, grp)\u001b[0m\n\u001b[0;32m   1947\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcheck\u001b[39m(\u001b[38;5;28mself\u001b[39m, grp: Union[\u001b[38;5;28mstr\u001b[39m, h5py\u001b[38;5;241m.\u001b[39mGroup] \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mint\u001b[39m:\n\u001b[0;32m   1948\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Run layout check. This method may be overwritten to add conditional\u001b[39;00m\n\u001b[0;32m   1949\u001b[0m \u001b[38;5;124;03m     checking.\u001b[39;00m\n\u001b[0;32m   1950\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   1960\u001b[0m \u001b[38;5;124;03m        Number of detected issues.\u001b[39;00m\n\u001b[0;32m   1961\u001b[0m \u001b[38;5;124;03m     \"\"\"\u001b[39;00m\n\u001b[1;32m-> 1962\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_layout\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalidate\u001b[49m(\u001b[38;5;28mself\u001b[39m[grp])\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'validate'"
-     ]
-    }
-   ],
-   "source": [
-    "import h5py\n",
-    "with h5py.File(h5tbx.utils.generate_temporary_filename(suffix='.hdf'), 'w') as h5:\n",
-    "    h5.attrs['title'] = 'Tutorial data'\n",
-    "    h5.attrs['__version__'] = '0.1.12'\n",
-    "    test_filename = h5.filename  # or h5.hdf_filename\n",
-    "\n",
-    "with h5tbx.File(test_filename) as h5:\n",
-    "    print(h5.check())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3a84fae2-9413-4afc-aa13-ee5ecc37531f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with h5tbx.File(test_filename) as h5:\n",
-    "    lay = h5.layout\n",
-    "    lay.validate(h5)\n",
-    "    lay.report()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3e854c4b-fe0b-403a-8155-3286778afec0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
