--- a/docs/wrapper/SpecialIO.ipynb
+++ b/docs/wrapper/SpecialIO.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "<h5rdmtoolbox.conventions.core.use at 0x1ccd6b14fd0>"
+       "<h5rdmtoolbox.conventions.core.use at 0x220f2104e20>"
       ]
      },
      "execution_count": 1,
@@ -444,25 +444,25 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--5077702300\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--5077702300\">\n",
+       "                        <input id=\"group-ds--4761982300\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--4761982300\">\n",
        "                        /<span>(2)</span></label>\n",
        "                  \n",
        "\n",
        "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8.0a0</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/x-5079083800\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/x-5079086700\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/x-5079086700\">x</label>\n",
+       "                <ul id=\"ds-1-/x-4764871100\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/x-4764877300\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/x-4764877300\">x</label>\n",
        "                    <span class=\"h5tb-dims\">(4) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/y-5079614900\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/y-5079617700\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/y-5079617700\">y</label>\n",
+       "                <ul id=\"ds-1-/y-4765862600\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/y-4765869000\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/y-4765869000\">y</label>\n",
        "                    <span class=\"h5tb-dims\">(x: 4) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
@@ -713,25 +713,25 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--5107625300\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--5107625300\">\n",
+       "                        <input id=\"group-ds--4811366600\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--4811366600\">\n",
        "                        /<span>(2)</span></label>\n",
        "                  \n",
        "\n",
        "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8.0a0</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/x-5108524200\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/x-5108528200\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/x-5108528200\">x</label>\n",
+       "                <ul id=\"ds-1-/x-4812666500\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/x-4812670600\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/x-4812670600\">x</label>\n",
        "                    <span class=\"h5tb-dims\">(12) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/y-5108966100\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/y-5108969100\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/y-5108969100\">y</label>\n",
+       "                <ul id=\"ds-1-/y-4813312300\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/y-4813316500\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/y-4813316500\">y</label>\n",
        "                    <span class=\"h5tb-dims\">(x: 12) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
@@ -974,25 +974,25 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--5138401500\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--5138401500\">\n",
+       "                        <input id=\"group-ds--4848376000\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--4848376000\">\n",
        "                        /<span>(2)</span></label>\n",
        "                  \n",
        "\n",
        "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8.0a0</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/x-5139759200\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/x-5139762200\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/x-5139762200\">x</label>\n",
+       "                <ul id=\"ds-1-/x-4850190500\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/x-4850196400\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/x-4850196400\">x</label>\n",
        "                    <span class=\"h5tb-dims\">(2, 8) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/y-5139889100\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/y-5139891400\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/y-5139891400\">y</label>\n",
+       "                <ul id=\"ds-1-/y-4850473400\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/y-4850478900\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/y-4850478900\">y</label>\n",
        "                    <span class=\"h5tb-dims\">(2, 8) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
@@ -1236,17 +1236,17 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--5161632500\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--5161632500\">\n",
+       "                        <input id=\"group-ds--4871464100\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--4871464100\">\n",
        "                        /<span>(1)</span></label>\n",
        "                  \n",
        "\n",
        "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8.0a0</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/testimg-5162809900\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/testimg-5162814900\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/testimg-5162814900\">testimg</label>\n",
+       "                <ul id=\"ds-1-/testimg-4873028000\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/testimg-4873034200\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/testimg-4873034200\">testimg</label>\n",
        "                    <span class=\"h5tb-dims\">(5, 20, 10) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
@@ -1521,17 +1521,17 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--5206179800\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--5206179800\">\n",
+       "                        <input id=\"group-ds--4921836900\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--4921836900\">\n",
        "                        /<span>(1)</span></label>\n",
        "                  \n",
        "\n",
        "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8.0a0</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/testimg-5206892700\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/testimg-5206895600\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/testimg-5206895600\">testimg</label>\n",
+       "                <ul id=\"ds-1-/testimg-4923179600\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/testimg-4923185900\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/testimg-4923185900\">testimg</label>\n",
        "                    <span class=\"h5tb-dims\">(5, 20, 10) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
