updated docs and fixed small issues on the way

--- a/docs/gettingstarted/quickoverview.ipynb
+++ b/docs/gettingstarted/quickoverview.ipynb
@@ -74,7 +74,7 @@
        "  File.__init__():\n",
        "    * \u001b[1mcontact\u001b[0m:\n",
        "\t\tContact or responsible person represented by an ORCID-ID.\n",
-       "    * \u001b[3mstandard_name_table\u001b[0m (default=<h5rdmtoolbox.conventions.consts.DefaultValue object at 0x0000021CA5744F10>):\n",
+       "    * \u001b[3mstandard_name_table\u001b[0m (default=<h5rdmtoolbox.conventions.consts.DefaultValue object at 0x000002A88BD4A940>):\n",
        "\t\tThe standard name table of the convention.\n",
        "    * \u001b[3mcomment\u001b[0m (default=None):\n",
        "\t\tA comment to further describe the data.\n",
@@ -112,7 +112,7 @@
     }
    ],
    "source": [
-    "cv = h5tbx.conventions.from_zenodo('8276817')\n",
+    "cv = h5tbx.conventions.from_zenodo('8281285')\n",
     "# cv = h5tbx.conventions.from_yaml(tutorial.get_standard_attribute_yaml_filename())\n",
     "cv"
    ]
@@ -345,8 +345,8 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--4801239000\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--4801239000\">\n",
+       "                        <input id=\"group-ds--6932405500\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--6932405500\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
        "\n",
@@ -386,7 +386,7 @@
     {
      "data": {
       "text/plain": [
-       "<h5rdmtoolbox.conventions.core.use at 0x21cb882a130>"
+       "using(\"planar-piv-convention\")"
       ]
      },
      "execution_count": 4,
@@ -516,14 +516,6 @@
     "tags": []
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\da4323\\Documents\\programming\\GitHub\\h5RDMtoolbox\\h5rdmtoolbox\\wrapper\\core.py:1895: UserWarning: mode is read only. Provided standard attributes are ignored: dict_keys(['standard_name_table', 'comment', 'contact', 'references'])\n",
-      "  warnings.warn(f'mode is read only. Provided standard attributes are ignored: {skwargs.keys()}')\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -896,21 +888,21 @@
        "  * time     (time) float64 0.0 0.03927 0.07854 0.1178 ... 0.7069 0.7461 0.7854\n",
        "Attributes:\n",
        "    long_name:  air velocity in pipe\n",
-       "    units:      m/s</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'vel'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>time</span>: 21</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-6dd62de6-c7f2-4171-904e-c5df8281c20d' class='xr-array-in' type='checkbox' ><label for='section-6dd62de6-c7f2-4171-904e-c5df8281c20d' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>-25.0 -23.31 -22.51 -23.01 -24.55 ... -24.96 -23.28 -22.51 -23.04</span></div><div class='xr-array-data'><pre>array([-25.        , -23.31387349, -22.51019824, -23.00958576,\n",
+       "    units:      m/s</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'vel'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>time</span>: 21</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-c000d875-019e-42cb-8c11-b9433ca827c3' class='xr-array-in' type='checkbox' ><label for='section-c000d875-019e-42cb-8c11-b9433ca827c3' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>-25.0 -23.31 -22.51 -23.01 -24.55 ... -24.96 -23.28 -22.51 -23.04</span></div><div class='xr-array-data'><pre>array([-25.        , -23.31387349, -22.51019824, -23.00958576,\n",
        "       -24.55067658, -26.32692532, -27.40871436, -27.22987853,\n",
        "       -25.88401336, -24.07549091, -22.75081959, -22.60327943,\n",
        "       -23.71008708, -25.49198361, -27.01639558, -27.48550666,\n",
        "       -26.65380284, -24.95656469, -23.28205885, -22.50665477,\n",
-       "       -23.03616798])</pre></div></div></li><li class='xr-section-item'><input id='section-14a23eb5-67ee-4ea6-9dad-031eae9fbf76' class='xr-section-summary-in' type='checkbox'  checked><label for='section-14a23eb5-67ee-4ea6-9dad-031eae9fbf76' class='xr-section-summary' >Coordinates: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>time</span></div><div class='xr-var-dims'>(time)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>0.0 0.03927 ... 0.7461 0.7854</div><input id='attrs-7c58e908-523d-4d36-9f78-a474b10d1aad' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-7c58e908-523d-4d36-9f78-a474b10d1aad' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-690f5a61-cadd-418f-820a-372e44dc10a1' class='xr-var-data-in' type='checkbox'><label for='data-690f5a61-cadd-418f-820a-372e44dc10a1' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>measurement time</dd><dt><span>units :</span></dt><dd>s</dd></dl></div><div class='xr-var-data'><pre>array([0.      , 0.03927 , 0.07854 , 0.11781 , 0.15708 , 0.19635 , 0.235619,\n",
+       "       -23.03616798])</pre></div></div></li><li class='xr-section-item'><input id='section-00aac1b6-cf06-4be4-ba07-364a54e4c71f' class='xr-section-summary-in' type='checkbox'  checked><label for='section-00aac1b6-cf06-4be4-ba07-364a54e4c71f' class='xr-section-summary' >Coordinates: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>time</span></div><div class='xr-var-dims'>(time)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>0.0 0.03927 ... 0.7461 0.7854</div><input id='attrs-e72d59cb-48de-414b-85a4-c4fe8b3fb9f6' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-e72d59cb-48de-414b-85a4-c4fe8b3fb9f6' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-8f1cf43d-fe61-418e-aa44-89877b222af9' class='xr-var-data-in' type='checkbox'><label for='data-8f1cf43d-fe61-418e-aa44-89877b222af9' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>measurement time</dd><dt><span>units :</span></dt><dd>s</dd></dl></div><div class='xr-var-data'><pre>array([0.      , 0.03927 , 0.07854 , 0.11781 , 0.15708 , 0.19635 , 0.235619,\n",
        "       0.274889, 0.314159, 0.353429, 0.392699, 0.431969, 0.471239, 0.510509,\n",
-       "       0.549779, 0.589049, 0.628319, 0.667588, 0.706858, 0.746128, 0.785398])</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-d0dd58af-ff5d-4841-b6ec-6837b34abd5c' class='xr-section-summary-in' type='checkbox'  ><label for='section-d0dd58af-ff5d-4841-b6ec-6837b34abd5c' class='xr-section-summary' >Indexes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>time</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-04675294-1e1b-4761-854b-19216dfc1147' class='xr-index-data-in' type='checkbox'/><label for='index-04675294-1e1b-4761-854b-19216dfc1147' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([                 0.0, 0.039269908169872414,  0.07853981633974483,\n",
+       "       0.549779, 0.589049, 0.628319, 0.667588, 0.706858, 0.746128, 0.785398])</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-e9b0f62f-cfd7-4441-9321-b35c2f5b0c68' class='xr-section-summary-in' type='checkbox'  ><label for='section-e9b0f62f-cfd7-4441-9321-b35c2f5b0c68' class='xr-section-summary' >Indexes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>time</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-9c467058-992f-42cf-ab50-ecf1bc1b2b43' class='xr-index-data-in' type='checkbox'/><label for='index-9c467058-992f-42cf-ab50-ecf1bc1b2b43' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([                 0.0, 0.039269908169872414,  0.07853981633974483,\n",
        "        0.11780972450961724,  0.15707963267948966,  0.19634954084936207,\n",
        "        0.23561944901923448,   0.2748893571891069,   0.3141592653589793,\n",
        "         0.3534291735288517,  0.39269908169872414,  0.43196898986859655,\n",
        "        0.47123889803846897,   0.5105088062083414,   0.5497787143782138,\n",
        "         0.5890486225480862,   0.6283185307179586,    0.667588438887831,\n",
        "         0.7068583470577035,   0.7461282552275759,   0.7853981633974483],\n",
-       "      dtype=&#x27;float64&#x27;, name=&#x27;time&#x27;))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-cd77c334-4351-4222-9b5a-0787ab9b1ad9' class='xr-section-summary-in' type='checkbox'  checked><label for='section-cd77c334-4351-4222-9b5a-0787ab9b1ad9' class='xr-section-summary' >Attributes: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>air velocity in pipe</dd><dt><span>units :</span></dt><dd>m/s</dd></dl></div></li></ul></div></div>"
+       "      dtype=&#x27;float64&#x27;, name=&#x27;time&#x27;))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-4360861f-4bff-4d7d-b701-1db2c5a72c13' class='xr-section-summary-in' type='checkbox'  checked><label for='section-4360861f-4bff-4d7d-b701-1db2c5a72c13' class='xr-section-summary' >Attributes: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>air velocity in pipe</dd><dt><span>units :</span></dt><dd>m/s</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'vel' (time: 21)>\n",
@@ -1230,8 +1222,8 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--8601950500\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--8601950500\">\n",
+       "                        <input id=\"group-ds--26424468200\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--26424468200\">\n",
        "                        /<span>(2)</span></label>\n",
        "                  \n",
        "\n",
@@ -1241,17 +1233,17 @@
        "</a></li><li style=\"list-style-type: none; font-style: italic\">standard_name_table : <a href=\"https://doi.org/10.5281/zenodo.8266929\"><img src=\"https://zenodo.org/badge/DOI/10.5281/zenodo.8266929.svg\" alt=\"DOI\"></a></li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/time-8604157900\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/time-8604162100\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/time-8604162100\">time</label>\n",
+       "                <ul id=\"ds-1-/time-26426053300\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/time-26426056100\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/time-26426056100\">time</label>\n",
        "                    <span class=\"h5tb-dims\">(21) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : measurement time</li><li style=\"list-style-type: none; font-style: italic\">units : s</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/vel-8604775800\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/vel-8604778300\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/vel-8604778300\">vel</label>\n",
+       "                <ul id=\"ds-1-/vel-26426768600\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/vel-26426772000\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/vel-26426772000\">vel</label>\n",
        "                    <span class=\"h5tb-dims\">(time: 21) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : air velocity in pipe</li><li style=\"list-style-type: none; font-style: italic\">offset : 10.0</li><li style=\"list-style-type: none; font-style: italic\">scale : 2.5 m/s/V</li><li style=\"list-style-type: none; font-style: italic\">units : V</li>\n",
        "                </ul>\n",
